--- a/styles/style.css
+++ b/styles/style.css
@@ -52,6 +52,7 @@ html, body {
 	padding: 5px;
 	font-family: 'Raleway';
 	border-radius: .25rem;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 .card:hover {
 	transform: scale(1.02);
