--- a/styles/style.css
+++ b/styles/style.css
@@ -49,10 +49,11 @@ html, body {
 	color: #444;
 	height: 250px;
 	width: 170px;
-	padding: 5px;
 	font-family: 'Raleway';
 	border-radius: .25rem;
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+	transition: transform 1s;
+	transform-style: preserve-3d;
 }
 .card:hover {
 	transform: scale(1.02);
@@ -109,4 +110,32 @@ input {
 	height: 10px;
 	margin-bottom: 10px;
 	background-color: #4CAF50;
+}
+
+.pickedcard__face {
+	position: absolute;
+	background-color: #444 !important;
+	margin: 0;
+	height: 100%;
+	width: 100%;
+	padding: 5px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	text-align: right;
+	font-family: 'Raleway';
+	cursor: pointer;
+	backface-visibility: hidden;
+}
+.pickedcard.is-flipped {
+	transform: rotateY(180deg);
+}
+.pickedcard__face--front {
+	background-color: #444 !important;
+	text-align: right;
+	font-family: 'Raleway';
+	cursor: pointer;
+}
+.pickedcard__face--back {
+transform: rotateY(180deg);
 }
