--- a/styles/style.css
+++ b/styles/style.css
@@ -92,6 +92,7 @@ input {
 }
 #startTime, #pointBtn {
 	margin: auto;
+	margin-top: 100px;
 	width: 225px;
 }
 /* On mouse-over, add a deeper shadow */
@@ -125,6 +126,7 @@ input {
 	text-align: right;
 	font-family: 'Raleway';
 	cursor: pointer;
+	border-radius: .25rem;
 	backface-visibility: hidden;
 }
 .pickedcard.is-flipped {
