--- a/styles/style.css
+++ b/styles/style.css
@@ -112,7 +112,6 @@ input {
 	margin-bottom: 10px;
 	background-color: #4CAF50;
 }
-
 .pickedcard__face {
 	position: absolute;
 	background-color: #444 !important;
@@ -120,10 +119,6 @@ input {
 	height: 100%;
 	width: 100%;
 	padding: 5px;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
-	text-align: right;
 	font-family: 'Raleway';
 	cursor: pointer;
 	border-radius: .25rem;
@@ -134,10 +129,14 @@ input {
 }
 .pickedcard__face--front {
 	background-color: #444 !important;
+	display: flex;
 	text-align: right;
-	font-family: 'Raleway';
-	cursor: pointer;
+	flex-direction: column;
+	justify-content: flex-end;
 }
 .pickedcard__face--back {
-transform: rotateY(180deg);
+	color: white;
+	padding:10px;
+	font-weight: 500;
+	transform: rotateY(180deg);
 }
