--- a/styles/style.css
+++ b/styles/style.css
@@ -8,9 +8,14 @@ html, body {
 	font-family: 'Raleway';
 }
 #cards {
-	display: flex;
-	justify-content: center;
-	width: 100%;
+    position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left:0;
+	right:0;
+	margin-left:auto;
+	margin-right:auto;
+	width: 950px;
 }
 .undefinedCards {
 	background-color: #444 !important;
@@ -82,6 +87,11 @@ html, body {
 	font-size: 40px;
 	text-transform: uppercase;
 	font-weight: 500;
+	margin: auto;
+}
+#topcontainer {
+	text-align: center;
+	margin: auto;
 }
 #thingsTodo {
 	margin: 0px;
@@ -93,6 +103,7 @@ input {
 #startTime, #pointBtn {
 	margin: auto;
 	width: 225px;
+	display: none;
 }
 /* On mouse-over, add a deeper shadow */
 .card:hover {
