--- a/styles/style.css
+++ b/styles/style.css
@@ -193,9 +193,8 @@ input {
 	text-align: center;
 	padding: 5px 0;
 	font-size: 10px;
-	color: blue;
   }
-  .header { grid-area: header; color: blue}
+  .header { grid-area: header;}
   .card, .undefinedCards, .cards {
 	height: 200px;
 	width: 1340px;
